force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Has_Error__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Has_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>