force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Mark_As_Not_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Mark_As_Not_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark As Not Duplicates</label>
    <type>Checkbox</type>
</CustomField>