force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Master_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Master_Record_Id__c</fullName>
    <label>Master Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>