force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Merge_Type__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Merge_Type__c</fullName>
    <description>Type of merge operation: Manual, Auto-Merge, Auto-Convert, Convert</description>
    <label>Merge Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>