force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Merged_At__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Merged_At__c</fullName>
    <label>Merged At</label>
    <type>DateTime</type>
</CustomField>