force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Object_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>