force-app/main/default/objects/noduplicates__Duplicate__c/fields/noduplicates__Second_Filter__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Second_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Filter</label>
    <type>Checkbox</type>
</CustomField>